pre overflow fix

--- a/summary_page/styles/styles.css
+++ b/summary_page/styles/styles.css
@@ -86,6 +86,7 @@ button:focus {
 /* wrap text in pre element*/
 pre {
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 h3 {
